Dependencies from Demo.Console to Shared Core and Data

--- a/src/Demo.Console/Demo.Console.csproj
+++ b/src/Demo.Console/Demo.Console.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Shared.Core\Shared.Core.csproj" />
+      <ProjectReference Include="..\Shared.Data\Shared.Data.csproj" />
+    </ItemGroup>
+
 </Project>
