--- a/src/Playground/Playground.csproj
+++ b/src/Playground/Playground.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="E04leapyear\Exercise 2\" />
+      <Folder Include="E06_Records\" />
+    </ItemGroup>
+
 </Project>
