--- a/src/Playground/Playground.csproj
+++ b/src/Playground/Playground.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <Folder Include="E04leapyear\Exercise 2\" />
+      <Folder Include="E10_Metaprogramming\" />
     </ItemGroup>
 
 </Project>
