--- a/src/GAE.Async/GAE.Async/GAE.Async.csproj
+++ b/src/GAE.Async/GAE.Async/GAE.Async.csproj
@@ -1,13 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <UseWPF>true</UseWPF>
     </PropertyGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\..\Shared.Core\Shared.Core.csproj" />
-    </ItemGroup>
 
 </Project>
