--- a/src/GAE.Query/GAE.Query/GAE.Query.csproj
+++ b/src/GAE.Query/GAE.Query/GAE.Query.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\..\Shared.Core\Shared.Core.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\Shared.Data\Shared.Data.csproj" />
+    </ItemGroup>
+
 </Project>
